# evil_twins

./: .gitignore  README.md  mypy.ini  pyproject.toml
datasets/advbench/: harmful_behaviors.csv  harmful_strings.csv
evil_twins/: __init__.py  prompt_optim.py
experiments/: preprocess_data.py  run_experiments_hard.py  run_experiments_soft.py
reconstruction/: common.py  hard_prompts.py  reconstruct.py  soft_prompts.py
results_from_paper/: gpt4_suggested_vicuna.json  shuffle_results.json  transfer_results_pythia.json  vicuna_results.json
results_from_paper/exp_gemma/cold_results/: results_0.json  results_1.json  results_10.json  results_11.json  results_12.json  results_13.json  results_14.json  results_15.json  results_16.json  results_17.json  results_18.json  results_19.json  results_2.json  results_20.json  results_21.json  results_22.json  results_23.json  results_24.json  results_25.json  results_26.json  results_27.json  results_28.json  results_29.json  results_3.json  results_30.json  results_31.json  results_32.json  results_33.json  results_34.json  results_35.json  results_36.json  results_37.json  results_38.json  results_39.json  results_4.json  results_40.json  results_41.json  results_42.json  results_43.json  results_44.json  (+60 more)
results_from_paper/exp_gemma/results/: results_0.json  results_1.json  results_10.json  results_11.json  results_12.json  results_13.json  results_14.json  results_15.json  results_16.json  results_17.json  results_18.json  results_19.json  results_2.json  (+87 more)
results_from_paper/transfer_judged/: Llama-2-13b-chat-hf_judged.json  Llama-2-7b-chat-hf_judged.json  OpenHermes-13B_judged.json  OpenHermes-2.5-Mistral-7B_judged.json  gemini_judged.json  gpt-3.5_judged.json  gpt-4_judged.json  haiku_judged.json  mistral-small_judged.json  mistral-tiny_judged.json  mistral_judged.json  sonnet_judged.json  vicuna-13b-v1.5_judged.json  vicuna-7b-v1.5_judged.json
transfer/: gpt_judge.py  transfer_local_models.py
transfer_and_apis/: api_helpers.py  gpt_suggested.py  transfer_anthropic.py  transfer_google.py  transfer_mistral.py  transfer_openai.py
(+728 files in other folders)
