[build-system]
requires = ["setuptools"]

[project]
name = "evil_twins"
version = "0.0.1"
description = ""
requires-python = ">=3.10"
dependencies = [
    "torch",
    "transformers",
    "tqdm",
    "einops",
    "accelerate",
    "sentencepiece",
]

[project.optional-dependencies]
dev = ["mypy", "ruff", "pre-commit", "jupyter", "matplotlib", "scipy"]
transfer = [
    "openai",
    "anthropic",
    "mistralai",
    "google-generativeai",
    "python-dotenv",
]
all = ["evil_twins[dev,transfer]"]

[project.urls]
"Homepage" = "https://github.com/rimon15/evil_twins"

[tool.setuptools]
packages = ["evil_twins"]

[tool.mypy]
python_version = "3.11"
explicit_package_bases = true
warn_unreachable = true
check_untyped_defs = true
warn_redundant_casts = true
ignore_missing_imports = true
warn_unused_configs = true
files = "evil_twins"
exclude = ["datasets", "docs"]

[tool.ruff]
indent-width = 2
line-length = 85
extend-include = ["*.ipynb"]
target-version = "py311"

[tool.ruff.isort]
lines-after-imports = 2

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []

[tool.ruff.lint.pycodestyle]
max-line-length = 85

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
